Add template for Cards CPT

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ resources/assets/config-local.json
 # ignore everything in the root except the "wp-content" directory.
 /*
 !wp-content/
+!README
 
 # ignore everything in the "wp-content" directory, except:
 # mu-plugins, plugins, and themes directories
